--- a/src/inet/applications/sctpapp/ChangeLog
+++ b/src/inet/applications/sctpapp/ChangeLog
@@ -2,6 +2,10 @@
 
 2018-06-15  ------ inet-4.0.0 released ------
 
+2018-06-25  Zoltan Bojthe
+
+	Fixed CreationTimeTag.
+
 2018-04-25  Zoltan Bojthe
 
 	Refactored to use the new SctpSocket interface.
