--- a/src/inet/linklayer/common/ChangeLog
+++ b/src/inet/linklayer/common/ChangeLog
@@ -2,6 +2,13 @@
 
 2018-06-15  ------ inet-4.0.0 released ------
 
+2018-06-25  Levente Mészáros
+
+	Added new generic FcsMode enumeration.
+	Replaced EthernetFcsMode with FcsMode.
+	Replaced parseEthernetFcsMode with parseFcsMode.
+	Added FCS_MODE_UNDEFINED enum members.
+
 2018-06-05  Levente Mészáros
 
 	Replaced fooType NED parameters with foo.typename parameters.
