--- a/src/inet/transportlayer/common/ChangeLog
+++ b/src/inet/transportlayer/common/ChangeLog
@@ -2,6 +2,16 @@
 
 2018-06-15  ------ inet-4.0.0 released ------
 
+2018-06-25  Levente Mészáros
+
+	Renamed CRC to CrcMode.
+	Added parseCrcMode.
+	Added CRC_MODE_UNDEFINED enum members.
+
+2018-06-14  Zoltan Bojthe
+
+	Switched to using B type for TransportPseudoHeader packetLength field.
+
 2018-05-10  Zoltan Bojthe
 
 	Moved header serializers to the corresponding protocol folders.
