--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -2,6 +2,19 @@
 
 2018-06-15  ------ inet-4.0.0 released ------
 
+2018-06-25  Zoltan Bojthe
+
+	CRC insertion calculates CRC only when crcMode is CRC_COMPUTED.
+
+2018-06-20  Zoltan Bojthe
+
+	Fixed CreationTimeTag.
+	Added fragmentation check to SctpNatHook.
+
+2018-06-18  Zoltan Bojthe
+
+	CrcInsertion doesn't calculate CRC for fragmented packets and forwarded packets.
+
 2018-06-12  Zoltan Bojthe
 
 	Fixed SctpHeaderSerializer to fill all unfilled bytes.
