--- a/doc/src/developers-guide/ch-physicallayer.tex
+++ b/doc/src/developers-guide/ch-physicallayer.tex
@@ -39,19 +39,21 @@ TODO: wireless vs. wired medium
 
 \section{Overview}
 
-Today's electric devices use more and more wireless communication methods such
-as Wifi, Bluetooth, NFC, UMTS, and LTE. Despite the diversity of these devices
-there are many similarities in the modeling of their physical layer components.
+Today's computing devices use a variety of wireless communication means, such
+as Wifi, Bluetooth, NFC, UMTS, and LTE. Despite the diversity of these devices,
+there are many commonalities in the way their physical layers can be simulated.
 The models often have similar signal representations and signal processing steps,
 and they also share the physical medium model where communication takes place.
 
-In general, the physical layer simulation is a very time consuming task. The
-simulation of signal propagation, signal fading, signal interference, and signal
-decoding in detail may often result in unacceptable performance. Finding the
-right abstractions, the right level of detail, and the right trade-offs between
-accuracy and performance is difficult and very important.
+Simulating the physical layer is generally a computation-intensive task. A
+detailed simulation of signal propagation, signal fading, signal
+interference, and signal decoding often results in an unacceptable
+performance. Finding the right abstractions, the right level of detail, and
+the right trade-offs between accuracy and performance is both difficult and
+important.
 
-To summarize, the physical layer is designed with the following goals in mind:
+The physical layer model in the INET Framework has been designed with the
+following goals in mind:
 \begin{itemize}
   \item customizability
   \item extensibility
@@ -66,22 +68,22 @@ C++ source files.
 
 \subsection{Customizability}
 
-Real world communication devices often provide a wide variety of configuration
-options to allow adapting to the physical conditions where they are required
-to operate. For example, a Wifi router administration interface often provides
+Real-world communication devices often provide a wide variety of configuration
+options to allow them to be adaped to the physical conditions where they are required
+to operate. For example, a Wifi router's administration interface often provides
 parameters to configure the transmission power, bitrate, preamble type, carrier
-frequency, RTS threshold, beacon interval, etc. Mostly these parameters have
-default values assigned, so the user doesn't have to set them separately, but
-may override them as needed.
+frequency, RTS threshold, beacon interval, etc. Most of those parameters have
+sensible default values assigned, so the user is not required to configure them,
+but may override them as needed.
 
-Similarly to real world devices the physical layer models also provide a wide
-variety of parameters to control their behavior. The most common NED parameters
-are various physical quantities with physical units such as transmission power
-\ttt{[W]}, reception sensitivity \ttt{[W]}, carrier frequency \ttt{[Hz]},
-communication range \ttt{[m]}, propagation speed \ttt{[m/s]}, SNIR reception
-threshold \ttt{[dB]}, bitrate \ttt{[b/s]}. Occasionally models support new
-parameters or new combinations, which don't exist in real world hardware, to
-allow further experimentation.
+Similar to real-world devices, the INET physical layer models also provide
+a wide variety of parameters to control their behavior. Many NED parameters
+correspond to physical quantities such as transmission power \ttt{[W]},
+reception sensitivity \ttt{[W]}, carrier frequency \ttt{[Hz]},
+communication range \ttt{[m]}, propagation speed \ttt{[m/s]}, SNIR
+reception threshold \ttt{[dB]}, or bitrate \ttt{[b/s]}. Occasionally,
+models have more degrees of freedom than the real devices, to allow further
+experimentation.
 
 Another important and commonly used parameter kind selects among alternative
 implementations of a particular interface by providing its name. Different
@@ -92,13 +94,13 @@ hierarchy, but allows better extensibility.
 
 \subsection{Extensibility}
 
-Similarly to designing other simulation models, modeling the physical layer is
+Similar to designing other simulation models, modeling the physical layer is
 not at all an unambiguous task. For example, the research literature contains a
 number of different path loss models for signal propagation, there are different
 bit error models for a particular protocol standard, representing the signal in
 the analog domain can also be done in several different ways, and so on.
 
-In order to support this diversity the physical layer is designed to be
+In order to support this diversity, the physical layer model is designed to be
 extensible with alternative implementations at various parts of the model. This
 is realized by separately defining C++ and NED interfaces between modules, and
 also by providing parameters in their parent modules to easily select among the
@@ -116,7 +118,7 @@ There are many possible ways to model various aspects of the physical layer.
 The most important difference lies in the trade-off between performance versus
 accuracy. In order to support the different trade-offs the physical layer is
 designed to be scalable with respect to the simulated level of detail. In other
-words, it's scalable from high-performance less accurate simulations to high
+words, it is scalable from high-performance less accurate simulations to high
 fidelity slower simulations.
 
 The physical layer model is scalable along the following axes:
@@ -187,7 +189,7 @@ and receiving signals on the medium. It contains an antenna model, a transmitter
 model, a receiver model, and an energy consumer model. The antenna model is
 shared between the transmitter model and the receiver model. The separation of
 the transmitter model and the receiver model allows asymmetric configurations.
-The energy consumer model is optional and it's only used when the simulation of
+The energy consumer model is optional and it is only used when the simulation of
 energy consumption is necessary.
 
 The radio model has an operational mode that is called the radio mode. The radio
@@ -197,14 +199,14 @@ may optionally take a non-zero amount of time. The supported radio modes are the
 following:
 
 \begin{itemize}
-  \item \ttt{off}: communication isn't possible, energy consumption is zero
-  \item \ttt{sleep}: communication isn't possible, energy consumption is minimal
-  \item \ttt{receiver}: only reception is possible, energy consumption is low
-  \item \ttt{transmitter}: only transmission is possible, energy consumption is
+  \item \textit{off}: communication isn't possible, energy consumption is zero
+  \item \textit{sleep}: communication isn't possible, energy consumption is minimal
+  \item \textit{receiver}: only reception is possible, energy consumption is low
+  \item \textit{transmitter}: only transmission is possible, energy consumption is
 high
-  \item \ttt{transceiver}: reception and transmission is simultaneously
+  \item \textit{transceiver}: reception and transmission is simultaneously
 possible, energy consumption is high
-  \item \ttt{switching}: communication isn't possible, energy consumption is
+  \item \textit{switching}: communication isn't possible, energy consumption is
 minimal
 \end{itemize}
 
@@ -214,22 +216,22 @@ automatically published by the radio. The signaled transmitter states are the
 following:
 
 \begin{itemize}
-  \item \ttt{undefined}: isn't operating
-  \item \ttt{idle}: there's no transmission in progress
-  \item \ttt{transmitting}: transmission is in progress
+  \item \textit{undefined}: not in operation
+  \item \textit{idle}: no transmission in progress
+  \item \textit{transmitting}: a transmission is in progress
 \end{itemize}
 
 The signaled receiver states are the following:
 
 \begin{itemize}
-  \item \ttt{undefined}: isn't operating
-  \item \ttt{idle}: there's no reception in progress
-  \item \ttt{busy}: received signal is not interpretable
-  \item \ttt{synchronizing}: synchronization is in progress
-  \item \ttt{receiving}: reception is in progress
+  \item \textit{undefined}: not in operation
+  \item \textit{idle}: no reception in progress
+  \item \textit{busy}: received signal is not interpretable
+  \item \textit{synchronizing}: synchronization is in progress
+  \item \textit{receiving}: reception is in progress
 \end{itemize}
 
-When a radio wants to transmit a signal on the medium it sends direct messages
+When a radio wants to transmit a signal on the medium, it sends direct messages
 to all affected radios with the help of the central medium module. The messages
 contain a shared data structure which describes the transmission the way it
 entered the medium. The messages arrive at the moment when start of the
@@ -238,9 +240,8 @@ incoming messages with the help of the central medium module. This kind of
 centralization allows the medium to do shared computations in a more efficient
 way and it also makes parallel computation possible.
 
-As stated above the radio module utilizes multiple submodules to further split
-its task. This design decision makes it more extensible and customizable. The
-following sections describe the parts of the radio model.
+To maintain modularity, the radio module delegates many of is functions to submodules.
+The following sections describe the parts of the radio model.
 
 \subsection{Antenna Models}
 
@@ -297,15 +298,15 @@ directories.
 The receiver model describes the physical process which converts electric
 signals into packets. In other words, this model converts a reception, along
 with an interference computed by the medium model, into a MAC packet and a
-reception indication. It also determines the following for each transmission: 
+reception indication. It also determines the following for each transmission:
 
 \begin{itemize}
-  \item \ttt{is the reception possible or not}: based on the signal
+  \item \textit{is the reception possible or not}: based on the signal
 characteristics such as reception power, carrier frequency, bandwidth, preamble
 mode, modulation scheme
-  \item \ttt{if the reception is possible, is reception attempted or not}: based
+  \item \textit{if the reception is possible, is reception attempted or not}: based
 on the ongoing reception and the support of signal capturing
-  \item \ttt{if the reception is attempted, is reception successful or not}:
+  \item \textit{if the reception is attempted, is reception successful or not}:
 based on the error model and the simulated part of the signal decoding
 \end{itemize}
 
@@ -320,7 +321,7 @@ decoding, and deserialization. This reception model requires much more
 computation, but it produces accurate sample domain, symbol domain, and bit
 domain representations.
 
-The various protocol specific receiver models are in the corresponding 
+The various protocol specific receiver models are in the corresponding
 directories.
 
 \subsection{Transmission Error Modeling}
@@ -328,7 +329,7 @@ directories.
 Determining the reception errors is a crucial part of the reception process.
 There are often several different statistical error models in the literature
 even for a particular physical layer. In order to support this diversity the
-error model is a separate replaceable component of the receiver. 
+error model is a separate replaceable component of the receiver.
 
 The error model describes how the signal to noise ratio affects the amount of
 errors at the receiver. The main purpose of this model is to determine whether
@@ -415,17 +416,17 @@ indications, which are computed during the reception process. The following list
 provides some examples:
 
 \begin{itemize}
-  \item \ttt{packet domain}: actual packet, packet error rate, packet error bit,
+  \item \textit{packet domain}: actual packet, packet error rate, packet error bit,
 etc.
-  \item \ttt{bit domain}: various bit lengths, bitrates, actual bits, forward
+  \item \textit{bit domain}: various bit lengths, bitrates, actual bits, forward
 error correction code, interleaving scheme, scrambling scheme, bit error rate,
 number of bit errors, actual erroneous bits, etc.
-  \item \ttt{symbol domain}: number of symbols, symbol rate, actual symbols,
+  \item \textit{symbol domain}: number of symbols, symbol rate, actual symbols,
 modulation scheme, symbol error rate, number of symbol errors, actual erroneous
 symbols, etc.
-  \item \ttt{sample domain}: number of samples, sampling rate, actual samples,
+  \item \textit{sample domain}: number of samples, sampling rate, actual samples,
 etc.
-  \item \ttt{analog domain}: space-time coordinates, antenna orientations,
+  \item \textit{analog domain}: space-time coordinates, antenna orientations,
 communication range, interference range, detection range, carrier frequency,
 subcarrier frequencies, bandwidths, scalar or dimensional power, receive signal
 strength indication, signal to noise and interference ratio, etc.
@@ -434,7 +435,7 @@ strength indication, signal to noise and interference ratio, etc.
 In simple case the packet domain specifies the MAC packet only, and the bit
 domain specifies the bit length and the bitrate. The symbol domain specifies the
 used modulation, and the sample domain is simply ignored. The most important
-part is the analog domain representation, because it's indispensable to be able
+part is the analog domain representation, because it is indispensable to be able
 to compute some kind of signal to noise and interference ratio. The following
 figure shows four different kinds of analog domain representations, but other
 representations are also possible.
@@ -445,9 +446,9 @@ representations are also possible.
 \caption{Various analog signal representations}
 \end{figure}
 
-The first representation is called range-based, and it's used by the unit disc
-radio. The advantage of this data structure is that it's compact, predictable,
-and provides high performance. The disadvantage is that it's very inaccurate in
+The first representation is called range-based, and it is used by the unit disc
+radio. The advantage of this data structure is that it is compact, predictable,
+and provides high performance. The disadvantage is that it is very inaccurate in
 terms of modeling reality. Nevertheless, this representation might be sufficient
 for developing a new routing protocol if accurate simulation of packet loss is
 not important.
@@ -473,7 +474,7 @@ follow the real spectrum more precisely at both ends of the band.
 The flat signal representation uses a single object to simulatenously describe
 all domains of the transmission or the reception. In contrast, the layered
 signal representation uses one object to describe every domain seperately. The
-advantage of the latter is that it's extensible with alternative implementations
+advantage of the latter is that it is extensible with alternative implementations
 for each domain. The disadvantage is that it needs more allocation and resource
 management.
 
@@ -496,7 +497,7 @@ packet from the higher layer. The radio must be in transmitter or transceiver
 mode before receiving a MAC packet, otherwise it throws an exception. At first
 the transmitter model creates a data structure that describes the transmitted
 signal based on the received MAC packet and the attached transmission request.
-The resulting data structure is immutable, it's not going to be changed in any
+The resulting data structure is immutable, it is not going to be changed in any
 later processing step.
 
 Thereafter the propagation model computes the arrival space-time coordinates for
@@ -512,13 +513,13 @@ of interfering signals is independent of this step.
 Thereafter the attenuation model computes the reception for the receiver using
 the original transmission and the arrival data structure. It applies the path
 loss model, the obstacle loss model and the multipath model to the transmission.
-The resulting data structure is also immutable, it's not going to be changed in
+The resulting data structure is also immutable, it is not going to be changed in
 any later processing step.
 
 Thereafter the medium model computes the interference for the reception by
 collecting all interfering receptions and noises. Another signal is considered
-interfering if it owerlaps both in time and frequency domains with respect to 
-the minimum interference parameters. The background noise model also computes a 
+interfering if it owerlaps both in time and frequency domains with respect to
+the minimum interference parameters. The background noise model also computes a
 noise signal that is added to the interference.
 
 The reception process starts in the receiver radio when it receives a message
@@ -532,7 +533,7 @@ Thereafter the receiver model computes the signal to noise and interference
 ratio from the reception and the interference. Using the result, the bitrate,
 and the modulation scheme the error model computes the necessary error rates.
 Alternatively the error model might compute the erroneous bits, or symbols by
-altering the corresponding data of the original transmission. 
+altering the corresponding data of the original transmission.
 
 Thereafter the receiver determines the received MAC packet by either simply
 reusing the original, or actually decoding from the lowest represented domain
@@ -570,7 +571,7 @@ model creates one arrival instance per transmission per receiver.
 This data structure describes the way the receiver radio is listening on the
 medium. The physical layer ignores certain transmissions either during computing
 the interference or even the complete reception of such transmissions. For
-example, a narrowband listening specifies a carrier frequency and a bandwidth. 
+example, a narrowband listening specifies a carrier frequency and a bandwidth.
 
 \subsubsection{Reception}
 
@@ -608,7 +609,7 @@ This data structure describes the physical layer indications such as RSSI, SNIR,
 PER, BER, SER. These physical properties are optional and may be omitted if the
 receiver is configured to do so or if it doesn't support providing the data. The
 reception indication is attached as a control info object to the MAC packet sent
-up from the radio to the MAC module. 
+up from the radio to the MAC module.
 
 \section{Visualization}
 
@@ -626,7 +627,7 @@ The ongoing transmissions can be displayed with 3 dimensional spheres or with 2
 dimensional rings laying in the XY plane. As the signal propagates through space
 the figure grows with it to show where the beginning of the signal is. The inner
 circle of the ring figure shows as the end of the signal propagates through
-space. 
+space.
 
 The recent successful receptions are displayed as straight lines between the
 original positions of the transmission and the reception. The recent obstacle
