--- a/doc/src/users-guide/ch-ethernet.tex
+++ b/doc/src/users-guide/ch-ethernet.tex
@@ -184,7 +184,7 @@ encapsulation/decapsulation.
 
 INET framework ethernet switches are built from \nedtype{IMacRelayUnit}
 components. Each relay unit has N input and output gates for sending/receiving
-Ethernet frames. They should be connected to \nedtype{IEtherMac} modules.
+Ethernet frames. They should be connected to \nedtype{EthernetInterface} modules.
 
 The relay unit holds a table for the destination address -> output port mapping
 in a \nedtype{MacAddressTable} module.  When the relay unit receives a data frame, it
