--- a/doc/src/users-guide/ch-ipv6.tex
+++ b/doc/src/users-guide/ch-ipv6.tex
@@ -5,26 +5,21 @@
 \section{Overview}
 \label{sec:ipv6:overview}
 
-IPv6 support is implemented by several cooperating modules. The IPv6 module
-implements IPv6 datagram handling (sending, forwarding etc). It relies on
-\nedtype{Ipv6RoutingTable} to get access to the routes. \nedtype{Ipv6RoutingTable} also contains the
-neighbour discovery data structures (destination cache, neighbour cache,
-prefix list -- the latter effectively merged into the route table). Interface
-configuration (address, state, timeouts etc) is held in the \nedtype{InterfaceTable},
-in \cppclass{Ipv6InterfaceData} objects attached to \cppclass{InterfaceEntry}
-as its \ttt{ipv6()} member.
+Similarly to IPv4, IPv6 support is implemented by several cooperating modules.
+The base protocol is in the \nedtype{Ipv6} module, which relies on the
+\nedtype{Ipv6RoutingTable} to get access to the routes. Interface configuration
+(address, state, timeouts, etc.) is held in the node's \nedtype{InterfaceTable}.
 
-The module \nedtype{Ipv6NeighbourDiscovery} implements all tasks associated with
-neighbour discovery and stateless address autoconfiguration. The data
-structures themselves (destination cache, neighbour cache, prefix list)
-are kept in \nedtype{Ipv6RoutingTable}, and are accessed via public C++ methods.
-Neighbour discovery packets are only sent and processed by this module --
-when IPv6 receives one, it forwards the packet to \nedtype{Ipv6NeighbourDiscovery}.
+The \nedtype{Ipv6NeighbourDiscovery} module implements all tasks associated with
+neighbour discovery and stateless address autoconfiguration. The data structures
+themselves (destination cache, neighbour cache, prefix list) are kept in
+\nedtype{Ipv6RoutingTable}. The rest of ICMPv6's functionality, such as error messages,
+echo request/reply, etc.) is implemented in \nedtype{Icmpv6}.
 
-The rest of ICMPv6 (ICMP errors, echo request/reply etc) is implemented in
-the module \nedtype{Icmpv6}, just like with IPv4. ICMP errors are sent into
-\nedtype{Ipv6ErrorHandling}, which the user can extend or replace to get errors
-handled in any way they like.
+Mobile IPv6 support has been contributed to INET by the xMIPv6 project.
+The main module is \nedtype{xMIPv6}, which implements Fast MIPv6, Hierarchical MIPv6
+and Fast Hierarchical MIPv6 (thus, $x \in {F, H, FH}$). The binding cache and
+related data structures are kept in the \nedtype{BindingCache} module.
 
 
 %%% Local Variables:
