--- a/doc/src/users-guide/ch-diffserv.tex
+++ b/doc/src/users-guide/ch-diffserv.tex
@@ -70,26 +70,20 @@ The implementation follows these RFCs below:
 \section{Architecture of NICs}
 \label{sec:diffserv:architecture-of-nics}
 
-Network Interface Card (NIC) modules, such as \nedtype{PppInterface} and
+Network interface modules, such as \nedtype{PppInterface} and
 \nedtype{EthernetInterface}, may contain traffic conditioners in
-their input and output data path. Traffic conditioners have one input
-and one output gate as defined in the \nedtype{ITrafficConditioner}
-interface. They can transform the incoming traffic by dropping or
-delaying packets. They can also set the DSCP field of the packet,
-or mark them other way, for differentiated handling in the queues.
+their input and output data path. 
 
-The NICs may also contain an external queue component. If the \fpar{queueType}
-parameter is set, it must contain a module type implementing the \nedtype{IOutputQueue}
-module interface. If it is not specified, then \nedtype{Ppp} and \nedtype{EtherMac}
-use an internal drop tail queue to buffer the packets until the line is busy.
+Network interfaces may also contain an optional external queue component. In the
+absence of an external queue module, \nedtype{Ppp} and \nedtype{EtherMac} use an
+internal drop-tail queue to buffer the packets while the line is busy.
 
 \subsection{Traffic Conditioners}
 \label{sec:diffserv:traffic-conditioners}
 
-Traffic conditioners have one input
-and one output gate as defined in the \nedtype{ITrafficConditioner}
-interface. They can transform the incoming traffic by dropping or
-delaying packets. They can also set the DSCP field of the packet,
+Traffic conditioners have one input and one output gate as defined in the
+\nedtype{ITrafficConditioner} interface. They can transform the incoming traffic
+by dropping or delaying packets. They can also set the DSCP field of the packet,
 or mark them other way, for differentiated handling in the queues.
 
 Traffic conditioners perform the following actions:
@@ -107,14 +101,13 @@ composed to build a traffic conditioner as a compound module.
 \subsection{Output Queues}
 \label{sec:diffserv:output-queues}
 
-The queue component also has one input and one output gate. These components
-must implement a passive queue behaviour: they only deliver a packet,
-when the module connected to its output explicitly asks them.
-In terms of C++ it means, that the simple module owning the \fgate{out} gate,
-or which is connected to the \fgate{out} gate of the compound module,
-must implement the \cppclass{IPassiveQueue} interface. The next module
-asks a packet by calling the \ffunc{requestPacket()} method of this interface.
-
+Queue components must implement the \nedtype{IOutputQueue} module interface. 
+In addition to having one input and one output gate, these components
+must implement a passive queue behaviour: they only deliver a packet when the
+module connected to their output explicitly requests it.
+(In C++ terms, the module must implement the \cppclass{IPassiveQueue} interface.
+The next module requests a packet by calling the \ffunc{requestPacket()} method
+of that interface.)
 
 \section{Simple modules}
 \label{sec:diffserv:simple-modules}
