--- a/src/inet/routing/extras/olsr/ChangeLog
+++ b/src/inet/routing/extras/olsr/ChangeLog
@@ -81,7 +81,7 @@
 
 2013-11-04  Zoltan Bojthe
 
-	backport: OLSR/OLSR_ETX: bugfix in initialize()
+	backport: OLSR/Olsr_Etx: bugfix in initialize()
 
 2013-09-27  Andras Varga
 
