--- a/src/inet/networklayer/configurator/ipv4/ChangeLog
+++ b/src/inet/networklayer/configurator/ipv4/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-19  Zoltan Bojthe
+
+	Fixed memory leak in Ipv4NetworkConfigurator.
+
 2018-11-28  Levente Mészáros
 
 	Fixed checking optimized routing table against original.
