--- a/src/inet/applications/ethernet/ChangeLog
+++ b/src/inet/applications/ethernet/ChangeLog
@@ -1,3 +1,23 @@
+2018-11-14  Zoltan Bojthe
+
+	Removed unused obsolete EthernetApplication.
+
+2018-11-12  Zoltan Bojthe
+
+	Call socket->destroy() when the operation root module is not the containing node module.
+
+2018-11-09  Zoltan Bojthe
+
+	Switched to socket.destroy() in handleCrashOperation().
+
+2018-11-05  Zoltan Bojthe
+
+	Close/abort socket at module crash operation.
+
+2018-10-26  Zoltan Bojthe
+
+	Added missing socket close calls for stop/crash handling.
+
 2018-10-03  Zoltan Bojthe
 
 	Changed ethernet application base classes to ApplicationBase.
