--- a/src/inet/applications/generic/ChangeLog
+++ b/src/inet/applications/generic/ChangeLog
@@ -1,3 +1,11 @@
+2018-11-27  Zoltan Bojthe
+
+	Changed refreshDisplay to show lifecycle operational status.
+
+2018-11-05  Zoltan Bojthe
+
+	Added close/abort socket at module crash operation
+
 2018-10-10  Zoltan Bojthe
 
 	Changed IpvxTrafSink and IpvxTrafGen base classes to ApplicationBase.
