--- a/src/inet/applications/httptools/server/ChangeLog
+++ b/src/inet/applications/httptools/server/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-25  Zoltan Bojthe
+
+	Fixed NodeStatus module detection.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
