--- a/src/inet/applications/packetdrill/ChangeLog
+++ b/src/inet/applications/packetdrill/ChangeLog
@@ -1,3 +1,15 @@
+2018-12-11  Zoltan Bojthe
+
+	Refactored PacketDrillApp to use sockets.
+
+2018-10-29  Zoltan Bojthe
+
+	Changed PacketDrillApp base class to ApplicationBase.
+
+2018-10-25  Zoltan Bojthe
+
+	Fixed NodeStatus module detection.
+
 2018-10-04  Zoltan Bojthe
 
 	Added LifecycleUnsupported base class instead of copy-pasting the same code.
