--- a/src/inet/applications/tunapp/ChangeLog
+++ b/src/inet/applications/tunapp/ChangeLog
@@ -1,3 +1,11 @@
+2018-12-05  Zoltan Bojthe
+
+	Implemented lifecycle for TunnelApp.
+
+2018-11-13  Zoltan Bojthe
+
+	Added waiting for udp socketClosed indication in stopOperation.
+
 2018-09-27  Levente Mészáros
 
 	Renamed INITSTAGE_LINK_LAYER to INITSTAGE_NETWORK_INTERFACE_CONFIGURATION.
