--- a/src/inet/applications/udpapp/ChangeLog
+++ b/src/inet/applications/udpapp/ChangeLog
@@ -1,3 +1,23 @@
+2018-11-27  Zoltan Bojthe
+
+	Changed refreshDisplay to show lifecycle operational status.
+
+2018-11-13  Zoltan Bojthe
+
+	Added waiting for udp socketClosed indication in stopOperation.
+
+2018-11-09  Zoltan Bojthe
+
+	Switched to socket.destroy() in handleCrashOperation().
+
+2018-11-07  Zoltan Bojthe
+
+	Added @lifecycleSupport property.
+
+2018-10-26  Zoltan Bojthe
+
+	Added missing socket close calls for stop/crash handling.
+
 2018-06-28  Zoltan Bojthe
 
 	Fixed NED documentation.
