--- a/src/inet/common/scenario/ChangeLog
+++ b/src/inet/common/scenario/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-26  Zoltan Bojthe
+
+	Added new lifecycle commands for generic module operations.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
