--- a/src/inet/emulation/linklayer/ieee80211/ChangeLog
+++ b/src/inet/emulation/linklayer/ieee80211/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-17  Levente Mészáros
+
+	Cleaned up and updated documentation.
+
 2018-10-22  Levente Mészáros
 
 	Added support for host network namespaces.
