--- a/src/inet/emulation/transportlayer/udp/ChangeLog
+++ b/src/inet/emulation/transportlayer/udp/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-17  Levente Mészáros
+
+	Cleaned up and updated documentation.
+
 2018-10-18  Levente Mészáros
 
 	Added support for host network namespaces.
