--- a/src/inet/linklayer/base/ChangeLog
+++ b/src/inet/linklayer/base/ChangeLog
@@ -1,3 +1,7 @@
+2018-11-21  Zoltan Bojthe
+
+	Set state of InterfaceEntry in start/stop/crash operations.
+
 2018-10-08  Zoltan Bojthe
 
 	Moved registerInterface() call to MacProtocolBase::initialize().
