--- a/src/inet/linklayer/common/ChangeLog
+++ b/src/inet/linklayer/common/ChangeLog
@@ -1,3 +1,11 @@
+2018-12-12  Levente Mészáros
+
+	Extended, refactored QosClassifier.
+
+2018-11-22  Gyorgy Szaszko
+
+	Added a new generic purpose QosClassifier module which classifies packets into user priority categories.
+
 2018-09-27  Zoltan Bojthe
 
 	Changed ExampleQosClassifier, RandomQosClassifier to forward handleRegisterProtocol calls.
