--- a/src/inet/linklayer/ethernet/ChangeLog
+++ b/src/inet/linklayer/ethernet/ChangeLog
@@ -1,3 +1,40 @@
+2018-12-17  Zoltan Bojthe
+
+	Renamed several modules, classes around VLAN support.
+	Split Ieee8021qTag.msg into VlanTag.msg and Ieee8021qHeader.msg.
+
+	vlan submodule -> qEncap
+	Vlan -> VlanTunnel
+
+	Ieee8021QTagBase -> VlanTagBase
+	Ieee8021QInd -> VlanInd
+	Ieee8021QReq -> VlanReq
+	.vid -> .vlanId
+
+	Ieee8021QTag -> Ieee8021qHeader
+	IIeee8021QVlan -> IIeee8021qEncap
+	Ieee8021Q* -> Ieee8021q*
+
+2018-12-03  Zoltan Bojthe
+
+	Added isOpen() and socketClosed() to EthernetSocket.
+
+2018-11-27  Zoltan Bojthe
+
+	Wait until queue becomes empty at stop operation.
+
+2018-11-27  Zoltan Bojthe
+
+	Changed refreshDisplay to show lifecycle operational status.
+
+2018-11-30  Zoltan Bojthe
+
+	Added closed() and destroy() to EthernetSocket.
+
+2018-11-30  Zoltan Bojthe
+
+	Added ETHERNET_I_DATA indication to EthernetSocket.
+
 2018-11-27  Levente Mészáros
 
 	Replaced dispatch on message kind with dispatch on C++ type, message kinds overlap with base class.
