--- a/src/inet/linklayer/ieee80211/mac/aggregation/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/aggregation/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-20  Levente Mészáros
+
+	Added missing sequence number field setting for deaggregated frames.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
