--- a/src/inet/linklayer/ieee80211/mac/blockack/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/blockack/ChangeLog
@@ -1,3 +1,18 @@
+2018-12-20  Levente Mészáros
+
+	Added updating the starting sequence number of the block ack agreement at the originator.
+	Sometimes frames were incorrectly sent using normal ack due to comparing with the wrong starting sequence number.
+	Simplified loops by relying on the wrap around nature of SequenceNumber.
+	Replaced sequence number comparisons with operator<.
+
+2018-12-19  Levente Mészáros
+
+	Replaced variable and argument types for sequence number from int to SequenceNumber.
+
+2018-12-05  Levente Mészáros
+
+	802.11: Fixed when receiving the same block ack agreement twice.
+
 2018-12-05  Levente Mészáros
 
 	Fixed sequence number check if getAckState().
