--- a/src/inet/linklayer/ieee80211/mac/contract/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/contract/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-19  Levente Mészáros
+
+	Replaced variable and argument types for sequence number from int to SequenceNumber.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
