--- a/src/inet/linklayer/ieee80211/mac/fragmentation/ChangeLog
+++ b/src/inet/linklayer/ieee80211/mac/fragmentation/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-12  Levente Mészáros
+
+	Fixed fragmentation when the packet length equals with the fragmentation threshold.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
