--- a/src/inet/linklayer/ppp/ChangeLog
+++ b/src/inet/linklayer/ppp/ChangeLog
@@ -1,3 +1,11 @@
+2018-12-04  Zoltan Bojthe
+
+	Added wait until queue becomes empty at stop operation.
+
+2018-11-27  Zoltan Bojthe
+
+	Changed refreshDisplay to show lifecycle operational status.
+
 2018-10-08  Zoltan Bojthe
 
 	Moved registerInterface() call to MacProtocolBase::initialize().
