--- a/src/inet/physicallayer/analogmodel/bitlevel/ChangeLog
+++ b/src/inet/physicallayer/analogmodel/bitlevel/ChangeLog
@@ -1,3 +1,11 @@
+2018-12-21  Levente Mészáros
+
+	Added ignorePartialInterference parameter to scalar analogue models.
+
+	This parameter allows ignoring interfering signals which have partially
+	overlapping frequency domain analog representation. For example, a Wifi
+	signal using adjacent channels. This parameter is disabled by default.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
