--- a/src/inet/physicallayer/common/packetlevel/ChangeLog
+++ b/src/inet/physicallayer/common/packetlevel/ChangeLog
@@ -1,3 +1,11 @@
+2018-12-17  Levente Mészáros
+
+	Added end time to SignalTimeInd.
+
+2018-11-20  Timofei Istomin
+
+	Added signal arrival time to the incoming packets
+
 2018-09-26  Levente Mészáros
 
 	Added sensible default values for transmitter/receiver submodule types in radio modules.
