--- a/src/inet/transportlayer/contract/sctp/ChangeLog
+++ b/src/inet/transportlayer/contract/sctp/ChangeLog
@@ -1,3 +1,12 @@
+2018-12-12  Zoltan Bojthe
+
+	Added acceptSocket(), fixes for SCTP_I_AVAILABLE.
+	Added ICallback functions, optimisations.
+
+2018-11-09  Zoltan Bojthe
+
+	Added destroy() function to SctpSocket.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
