--- a/src/inet/transportlayer/contract/tcp/ChangeLog
+++ b/src/inet/transportlayer/contract/tcp/ChangeLog
@@ -1,3 +1,7 @@
+2018-11-09  Zoltan Bojthe
+
+	Added destroy() function to TcpSocket.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
