--- a/src/inet/transportlayer/contract/udp/ChangeLog
+++ b/src/inet/transportlayer/contract/udp/ChangeLog
@@ -1,3 +1,15 @@
+2018-12-03  Zoltan Bojthe
+
+	Removed Indication argument from socketClosed().
+
+2018-11-13  Zoltan Bojthe
+
+	Added SocketClosed indication (answer to "close").
+
+2018-11-09  Zoltan Bojthe
+
+	Added destroy() function to UdpSocket.
+
 ====== inet-4.x ======
 
 2018-06-27  ------ inet-4.0.0 released ------
