--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -1,3 +1,7 @@
+2018-12-10  Zoltan Bojthe
+
+	Fixed feature dependency.
+
 2018-09-27  Levente Mészáros
 
 	Eliminated unnecessary INITSTAGE_TRANSPORT_LAYER_2 stage.
