--- a/src/inet/transportlayer/tcp_lwip/ChangeLog
+++ b/src/inet/transportlayer/tcp_lwip/ChangeLog
@@ -1,3 +1,7 @@
+2018-10-25  Zoltan Bojthe
+
+	Fixed NodeStatus module detection.
+
 2018-10-04  Zoltan Bojthe
 
 	Added LifecycleUnsupported base class instead of copy-pasting the same code.
