--- a/src/inet/transportlayer/udp/ChangeLog
+++ b/src/inet/transportlayer/udp/ChangeLog
@@ -1,3 +1,15 @@
+2018-12-10  Zoltan Bojthe
+
+	Changed CRC calculator function to static, and get the crcMode value from the UDP header.
+
+2018-11-13  Zoltan Bojthe
+
+	Added SocketClosed indication (answer to "close").
+
+2018-11-09  Zoltan Bojthe
+
+	Added handlers for processing destroy socket command.
+
 2018-11-28  Levente Mészáros
 
 	Fixed protocol detection by port number in TCP/UDP.
